--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-material-ui-demo",
-  "description": "A demonstration of the Material-UI toolkit",
+  "description": "A demonstration of the Material-UI framework",
   "author": "James Nuanez <james@jamesnuanez.com> (http://www.jamesnuanez.com)",
   "version": "1.0.0",
   "license": "MIT",
